--- a/main.css
+++ b/main.css
@@ -157,6 +157,16 @@ main {
   font-size: inherit;
   padding-top: 0.5rem;
 }
+.cta button:hover {
+  background-color: #fffde7;
+  color: #181717;
+  border: 2px solid #181717;
+}
+.cta button:active {
+  background-color: #fffde7;
+  color: #181717;
+  border: 2px solid #181717;
+}
 
 @media (min-width: 600px) {
   .hamburguer {
