--- a/main.scss
+++ b/main.scss
@@ -150,6 +150,16 @@ main {
     margin-bottom: 2rem;
     font-size: inherit;
     padding-top: 0.5rem;
+    &:hover {
+      background-color: #fffde7;
+      color: rgb(24, 23, 23);
+      border: 2px solid rgb(24, 23, 23);
+    }
+    &:active {
+      background-color: #fffde7;
+      color: rgb(24, 23, 23);
+      border: 2px solid rgb(24, 23, 23);
+    }
   }
 }
 
